# CuteGallery

./: .gitignore  CMakeLists.txt  QtGallery.pro
src/: defines.h  gallery_widget.cpp  gallery_widget.h  image_scaner.cpp  image_scaner.h  image_widget.cpp  image_widget.h  imagelistmodel.cpp  imagelistmodel.h  imagelistview.cpp  imagelistview.h  main.cpp
